--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/includeNavbar">
 
-        <FrameLayout
+        <!--<FrameLayout
             android:id="@+id/frameSampler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -27,7 +27,7 @@
             <include layout="@layout/sampler_frame" />
         </FrameLayout>
 
-        <!--<FrameLayout
+        <FrameLayout
             android:id="@+id/frameLoved"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,12 +37,12 @@
         </FrameLayout>-->
 
         <FrameLayout
-            android:id="@+id/frameSharing"
+            android:id="@+id/frameSettings"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true">
 
-            <include layout="@layout/sharing_frame" />
+            <include layout="@layout/settings_frame" />
         </FrameLayout>
 
         <FrameLayout
