Max Volume -> Volume

--- a/app/src/main/res/layout/settings_frame.xml
+++ b/app/src/main/res/layout/settings_frame.xml
@@ -220,7 +220,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/progressBar"
                 android:layout_marginTop="20dp"
-                android:text="@string/max_volume" />
+                android:text="@string/volume" />
 
             <ImageView
                 android:id="@+id/bluetooth"
