--- a/app/src/main/res/layout/library_empty.xml
+++ b/app/src/main/res/layout/library_empty.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <TextView
         android:id="@+id/textView3"
