--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -61,7 +61,7 @@
         android:layout_weight="1"
         android:gravity="center_horizontal">
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/songsPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
