--- a/app/src/main/res/layout/settings_frame.xml
+++ b/app/src/main/res/layout/settings_frame.xml
@@ -21,7 +21,7 @@
             android:paddingRight="20dp"
             android:weightSum="1">
 
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -121,7 +121,7 @@
                     app:layout_constraintVertical_bias="0.918" />
 
 
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <!-- <TextView
                 android:id="@+id/textView16"
                 android:layout_width="match_parent"
