Revert "upgrade support libraries to androidx version"
This reverts commit 1d03164888691116e550eb1b367fcc1e7b381e4d.

--- a/app/src/main/res/layout/activity_playing.xml
+++ b/app/src/main/res/layout/activity_playing.xml
@@ -61,7 +61,7 @@
         android:layout_weight="1"
         android:gravity="center_horizontal">
 
-        <androidx.viewpager.widget.ViewPager
+        <android.support.v4.view.ViewPager
             android:id="@+id/songsPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
