--- a/app/src/main/res/layout/navbar.xml
+++ b/app/src/main/res/layout/navbar.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:id="@+id/topBar"
-    android:layout_alignParentTop="true"
+    android:id="@+id/mainNavBar"
+    android:layout_alignParentBottom="true"
     android:layout_centerHorizontal="true"
     android:orientation="horizontal"
     android:background="#000000"
